--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -231,5 +231,8 @@
     <ClInclude Include="Common\CudaContrastEnhancement.cuh">
       <Filter>Header Files\CudaFiles</Filter>
     </ClInclude>
+    <ClInclude Include="Common\CudaNormalizedCovariance.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
